--- a/styles/globals.css
+++ b/styles/globals.css
@@ -195,28 +195,29 @@
   height: 100%;
   width: 100%;
   padding: 1rem;
-  /* 自定义滚动条样式 */
-  scrollbar-width: thin;
-  scrollbar-color: #E2E8F0 transparent;
 }
 
-.widget-container::-webkit-scrollbar {
+/* 自定义滚动条样式 */
+::-webkit-scrollbar {
   width: 6px;
   height: 6px;
 }
 
-.widget-container::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   background: transparent;
 }
 
-.widget-container::-webkit-scrollbar-thumb {
-  background-color: #E2E8F0;
+::-webkit-scrollbar-thumb {
+  background-color: transparent;
   border-radius: 3px;
 }
 
-/* 只在内容超出时显示滚动条 */
-.widget-container:not(:hover)::-webkit-scrollbar-thumb {
-  background-color: transparent;
+*:hover::-webkit-scrollbar-thumb {
+  background-color: rgb(var(--foreground) / 0.2);
+}
+
+*:hover::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(var(--foreground) / 0.3);
 }
 
 /* 拖拽手柄样式 */
@@ -238,9 +239,6 @@
   height: 100%;
   width: 100%;
   padding: 1rem;
-  /* 自定义滚动条样式 */
-  scrollbar-width: thin;
-  scrollbar-color: #E2E8F0 transparent;
 }
 
 /* 拖拽手柄样式 */
